# model-based-social-navigation

./: .gitignore  README.md
src/: .gitignore
src/model_based_version/: CMakeLists.txt  package.xml
src/model_based_version/launch/: start.launch  start_one.launch
src/model_based_version/scripts/: agent.py  dataloader.py  dataloader_list.py  ensemble_model.py  env_predict.py  env_sample.py  env_sample_four.py  environment_four_agent.py  environment_one_agent.py  main_four.py  main_one.py  main_one_model_free.py  policy.py  replay_buffer_env.py  replay_buffer_model.py  transition_model.py
src/model_based_version/utils/: log_drawer.py
src/model_based_version/worlds/: 8x8.world
src/model_based_version/worlds/Target_3/: model.sdf
src/model_based_version/worlds/Target_4/: model.sdf
src/model_free_version/: CMakeLists.txt  package.xml
src/model_free_version/Models/TEST/: test_actor
src/model_free_version/config/: my_turtlebot2_params.yaml
src/model_free_version/launch/: start.launch
src/model_free_version/scripts/: agent.py  environment_four.py  main.py  policy.py  policy_FDMCA.py  policy_MNDS.py  utils.py
src/model_free_version/src/: odom_map.cpp
src/model_free_version/worlds/: kobuki_gazebo.urdf.xacro
src/model_free_version/worlds/Target_1/: model.config  model.sdf
src/model_free_version/worlds/Target_2/: model.sdf
src/model_free_version/worlds/Target_3/: model.config
src/turtlebot/: README.md
src/turtlebot/kobuki_description/urdf/: kobuki.urdf.xacro  kobuki_gazebo.urdf.xacro
src/turtlebot/kobuki_description/urdf/sensors/: asus_xtion_pro.urdf.xacro
src/turtlebot/kobuki_description/urdf/stacks/: hexagons.urdf.xacro
src/turtlebot/multiple_kobukis/: CMakeLists.txt  package.xml
src/turtlebot/multiple_kobukis/launch/: main.launch  one_robot.launch  publish_static.launch  robots.launch  run.launch  spawn_turtlebot_1.launch  spawn_turtlebot_2.launch  world_start.launch
src/turtlebot/multiple_kobukis/launch/includes/: kobuki_1.launch.xml  kobuki_2.launch.xml
src/turtlebot/multiple_kobukis/rviz_config/: tf_view.rviz
src/turtlebot/multiple_kobukis/scripts/: kobuki_get_gazebo_pose.py  kobuki_tf_broadcaster.py
src/turtlebot/turtlebot_create/create_description/: .cproject  CHANGELOG.rst  CMakeLists.txt
src/turtlebot/turtlebot_create/create_driver/: .cproject  CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
src/turtlebot/turtlebot_create/create_driver/src/create_driver/: __init__.py  create_driver.py
src/turtlebot/turtlebot_create/create_node/: .cproject  CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
src/turtlebot/turtlebot_create/create_node/cfg/: TurtleBot.cfg
src/turtlebot/turtlebot_create/create_node/nodes/: turtlebot_node.py
src/turtlebot/turtlebot_create/create_node/scripts/: kinect_breaker_enabler.py
src/turtlebot/turtlebot_create/create_node/src/create_node/: .gitignore  __init__.py  create_sensor_handler.py  diagnostics.py  gyro.py  roomba_sensor_handler.py
src/turtlebot/turtlebot_create/turtlebot_create/: .cproject  CHANGELOG.rst  CMakeLists.txt  package.xml
src/turtlebot/turtlebot_description/urdf/: turtlebot_library.urdf.xacro
src/turtlebot/turtlebot_gazebo/: package.xml
src/turtlebot/turtlebot_gazebo/launch/: main.launch  put_robot_in_world.launch  start_world.launch  start_world_circuit2.launch  start_world_corridor.launch  start_world_maze_loop_brick.launch  start_world_square.launch  turtlebot_project.launch
src/turtlebot/turtlebot_gazebo/launch/includes/: kobuki.launch
src/turtlebot/turtlebot_gazebo/models/Circuit_ql_1/: model.sdf
src/turtlebot/turtlebot_gazebo/models/Circuit_ql_2/: model.sdf
src/turtlebot/turtlebot_gazebo/models/Maze_ql_1/: model.sdf
src/turtlebot/turtlebot_gazebo/models/Round_ql_1/: model.sdf
src/turtlebot/turtlebot_gazebo/models/Target_2/: model.config
src/turtlebot/turtlebot_gazebo/models/Target_4/: model.config
src/turtlebot/turtlebot_gazebo/models/Target_5/: model.config  (+1 more)
src/turtlebot/turtlebot_gazebo/worlds/: circuit2.world  empty_wall.world  maze_10m_x_14m_original.world  maze_loop_brick.world  maze_mod.world  maze_mod_loop_simplephysics.world  square_obstacle.world  square_obstacle_more.world
src/turtlebot/turtlebot_navigation/: CMakeLists.txt
src/turtlebot/turtlebot_navigation/param/: costmap_common_params.yaml
src/turtlebot/turtlebot_navigation_gazebo/: CMakeLists.txt  package.xml
src/turtlebot/turtlebot_navigation_gazebo/launch/: amcl_demo.launch  main.launch  move_base_demo.launch
src/turtlebot/turtlebot_navigation_gazebo/maps/: my_map.pgm  my_map.yaml
src/turtlebot/turtlebot_navigation_gazebo/param/: costmap_common_params.yaml  costmap_common_params_old.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml
src/turtlebot/turtlebot_navigation_gazebo/urdf/: object.urdf
src/turtlebot/turtlebot_navigation_gazebo/worlds/: empty.world  empty_cafe.world
src/turtlebot/turtlebot_project/: CMakeLists.txt  package.xml
src/turtlebot/turtlebot_project/launch/: main.launch
src/turtlebot/turtlebot_project/worlds/: circuit.world  circuit2_tmp.world  empty_wall.world  maze_mod_loop.world
src/turtlebot/turtlebot_rtab/: CMakeLists.txt  package.xml
src/turtlebot/turtlebot_rtab/launch/: amcl_demo.launch  gmapping.launch.xml  gmapping_demo.launch  main.launch  main_with_script.launch
src/turtlebot/turtlebot_rtab/scripts/: start_main_launch_seq.bash
src/turtlebot/turtlebot_rtab/worlds/: costa_coffee.world  costa_coffee_bad.world  costa_coffee_good.world  costa_coffee_mod.world  costa_coffee_or.world  empty_wall.world
src/turtlebot/turtlebot_rviz_launchers/: .cproject  CHANGELOG.rst  CMakeLists.txt  package.xml
src/turtlebot/turtlebot_rviz_launchers/launch/: view_blind_nav.launch  view_localization.launch  view_mapping.launch  view_model.launch  view_planning.launch  view_robot.launch  view_teleop_navigation.launch
src/turtlebot/turtlebot_rviz_launchers/rviz/: amcl_demo.rviz  gmapping_demo.rviz  planning_demo.rviz
src/turtlebot/turtlebot_teleop/: CMakeLists.txt
src/turtlebot/turtlebot_teleop/launch/: keyboard_teleop.launch
(+106 files in other folders)
