<package>
  <name>create_driver</name>
  <version>2.3.1</version>
  <description>
    Driver for iRobot Create and Roomba
    
    This is a generic driver for iRobot Create that currently holds
    implementations for Turtlebot and Roomba. Port
    of pyrobot.py by Damon Kohler.  It is currently labeled as
    turtlebot_driver pending review by the entire create community
    before using the name create_driver.
  
    For ROS bindings, please see turtlebot_node.
  </description>
  <maintainer email="turtlebot@osrfoundation.org">OSRF</maintainer>
  <license>MIT</license>
  <url type="website">http://ros.org/wiki/create_driver</url>
  <url type="repository">https://github.com/turtlebot/turtlebot_create</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot_create/issues</url>
  <author email="damonkohler@google.com">Daemon Kohler</author>
  <author email="kwc@kwc.org">Ken Conley</author>
  <author email="mwise@willowgarage.com">Melonee Wise</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>