<package>
  <name>turtlebot_create</name>
  <version>2.3.1</version>
  <description>Catkin metapackage for the turtlebot_create stack</description>
  <maintainer email="turtlebot@osrfoundation.com">OSRF</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtlebot_create</url>
  <url type="repository">https://github.com/turtlebot/turtlebot_create</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot_create/issues</url>
  <author email="turtlebot@willowgarage.com">Willow</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>create_description</run_depend>
  <run_depend>create_driver</run_depend>
  <run_depend>create_node</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>